Fix overflow in benefits section in Service Page

--- a/src/components/pages/components/ServicesPage/ServicesPage_components/Benefits.css
+++ b/src/components/pages/components/ServicesPage/ServicesPage_components/Benefits.css
@@ -1,6 +1,6 @@
 /* BENEFITS STARTS */
 .benefits{
-
+    overflow-x: hidden;
 }
 .benefits > h3{
     margin-bottom: 60px;
